--- a/styles/style.css
+++ b/styles/style.css
@@ -74,3 +74,9 @@ body {
     padding-left: 60px;
     padding-right: 60px;
 }
+
+.videoJ {
+    width: 100%;
+    height: 413px;
+    object-fit: cover;
+}
