--- a/styles/style.css
+++ b/styles/style.css
@@ -68,6 +68,7 @@ body {
     height: 3px;
     background-color: yellow;
     opacity: 100;
+    width: 100%;
 }
 
 .footerPaddingJ {
@@ -79,4 +80,9 @@ body {
     width: 100%;
     height: 413px;
     object-fit: cover;
+}
+
+.banhMiPaddingJ {
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
