--- a/styles/style.css
+++ b/styles/style.css
@@ -283,3 +283,14 @@ hr {
     padding-top: 60px;
     padding-bottom: 60px;
 }
+
+.phoneJ {
+    width: 100%;
+    height: 373px;
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
+.contactBgJ {
+    
+}
