--- a/styles/style.css
+++ b/styles/style.css
@@ -288,7 +288,20 @@ hr {
     width: 100%;
     height: 373px;
     padding-right: 0px;
-    padding-left: 0px;
+    
+}
+
+.absoluteJ {
+    position: absolute;
+}
+
+.behindTheCounterJ {
+    left: 50%;
+    top: 25%;
+    transform: translate(-50%, -50%);
+    font-size: 128px;
+    -webkit-text-stroke-color: black;
+    -webkit-text-stroke-width: 2px;
 }
 
 .contactBgJ {
