--- a/styles/style.css
+++ b/styles/style.css
@@ -213,7 +213,18 @@ hr {
 
 .infoLogoSizeJ {
     width: 190px;
-    height: 190px;
+    height: 170px;
+}
+
+.infoTxtSizeJ {
+    font-size: 32px;
+    line-height: 60px;
+}
+
+.infoLogoSizeJ2 {
+    height: 144px;
+     width: 164px;
+      margin-top: 25px;
 }
 
 .centerJ {
@@ -303,9 +314,19 @@ hr {
     left: 50%;
     top: 25%;
     transform: translate(-50%, -50%);
-    font-size: 128px;
+    font-size: 96px;
     -webkit-text-stroke-color: black;
     -webkit-text-stroke-width: 2px;
+}
+
+.sloganJ {
+    font-size: 80px;
+    left: 50%;
+    top: 45%;
+    text-align: center;
+    transform: translate(-50%, -50%);
+    -webkit-text-stroke-color: black;
+    -webkit-text-stroke-width: 1px;
 }
 
 .contactBgJ {
