--- a/styles/style.css
+++ b/styles/style.css
@@ -370,3 +370,17 @@ hr {
 .banhMiHeadJ {
     padding-left: 25px;
 }
+
+.sandwichJ {
+    font-size: 36px;
+    color: white;
+}
+
+.sandwichJ2 {
+    font-size: 24px;
+    color: #a7a7a7;
+}
+
+.sandwichTxtJ {
+    width: 203px;
+}
