--- a/styles/style.css
+++ b/styles/style.css
@@ -579,6 +579,7 @@ hr {
     .aLittleAboutJ2 {
         font-size: 19px;
         line-height: 30px;
+        width: 310px;
     }
 
     .aLittleAboutJ2Div {
